# Huace_policy-document-analyzer

./: .env  README.md  README_部署指南.md  analyze_status.json  analyzer.py  api Management.md  app.py  flatten_policy_docs.py  init_db.py  opencode skill.txt  opencode_client.py  pyproject.toml  requirements.txt  scheduler.py  scraper.py  start.bat  test_opencode.py  users.json  华测导航业务.md  项目文档.txt
Agent Skills _ OpenCode_files/: Search.astro_astro_type_script_index_0_lang.7TPqQKfI.js.下载  _id_.D5dyEFgM.css  ec.4c0k7.css
analyze_result/: 2021-12-_十四五国家应急体系规划_分析结果_81.3.md  2021-2-21_关于全面推进乡村振兴加快农业农村现代化的意见_分析结果_75.0.md  2022-1-_十四五数字经济发展规划_分析结果_78.3.md  2022-12-_扩大内需战略规玥纲要(2022-2035年)_分析结果_83.3.md  2022-5-26_上海关于贯彻落实十四五全国农业机械化发展规划的实施意见_分析结果_90.0.md  2023-10-26_上海市促进商业航天发展打造空间信息产业高地行动计划（2023—2025年）_分析结果_90.0.md  2023-2-14_关于做好2023年全面推进乡村振兴重点工作的意见_分析结果_83.3.md  2024-1-_工业和信息化部等七部门关于推动未来产业创新发展的实施意见_分析结果_80.0.md  2024-2-19_关于学习运用千村示范、万村整治工程经验有力有效推进乡村全面振兴的意见_分析结果_83.3.md  2025-4-_终端设备直连卫星服务管理规定_分析结果_85.0.md  2025-8-_关于优化业务准入促进卫星通信产业发展的指导意见_分析结果_86.0.md  document_2_分析结果_85.0.md  document_3_分析结果_70.0.md  document_4_分析结果_75.0.md  document_5_分析结果_88.3.md  上海关于贯彻落实十四五全国农业机械化发展规划的实施意见_分析结果_75.7.docx  上海关于贯彻落实十四五全国农业机械化发展规划的实施意见_分析结果_75.7.md  上海市促进商业航天发展打造空间信息产业高地行动计划（2023—2025年）_分析结果_72.4.docx  上海市促进商业航天发展打造空间信息产业高地行动计划（2023—2025年）_分析结果_72.4.md  上海市北斗产业高质量发展三年行动计划_分析结果_79.5.docx  上海市北斗产业高质量发展三年行动计划_分析结果_79.5.md  上海市北斗产业高质量发展三年行动计划_分析结果_95.5.md  关于做好2023年全面推进乡村振兴重点工作的意见_分析结果_65.0.docx  关于做好2023年全面推进乡村振兴重点工作的意见_分析结果_65.0.md  关于全面推进乡村振兴加快农业农村现代化的意见_分析结果_66.8.docx  十四五国家应急体系规划_分析结果_71.2.docx  (+19 more)
(+198 files in other folders)
